--- a/KotlinApp/app/src/main/res/values/strings.xml
+++ b/KotlinApp/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">ToDoApp</string>
+    <string name="login_button">Login</string>
     <string name="button_name">ToDo</string>
+    <string name="dialog_ok">OK</string>
+    <string name="dialog_cancel">CANCEL</string>
 </resources>
