todofragment追加 recycleviewの機能追加 rxjavaを使用するよう修正、まだ動作していない

--- a/KotlinApp/app/src/main/res/values/strings.xml
+++ b/KotlinApp/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="hint_email">input your email</string>
     <string name="hint_password">input your password</string>
 
+    <string name="api_url">http://localhost/</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
